--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: hoang
-  password: Abc@_123
+  password: 123456
   socket: /var/run/mysqld/mysqld.sock
 
 development:
